<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eventivities</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="title_activity_main">Eventivities</string>
    <string name="title_activity_productos">Products List</string>
    <string name="title_activity_ejemplo">Products Example</string>
    <string name="title_activity_detalle_producto">Product Detail Activity</string>
    <string name="ejemplo_boton_insertar_productos">Insert</string>
    <string name="ejemplo_boton_mostrar_productos">Show</string>
    <string name="ejemplo_boton_eliminar_productos">Delete</string>
    <string name="ejemplo_boton_renombrar_producto">Rename</string>
    <string name="ejemplo_msg_insertados_productos">New products inserted into database</string>
    <string name="ejemplo_msg_eliminados_productos">Products removed from database</string>
    <string name="title_activity_que_tengo_cerca">What I Have Nearby</string>
    <string name="title_activity_locales">Locals</string>
    <string name="title_activity_ver_comentarios">View Comments</string>
    <string name="title_activity_mi_perfil">My Profile</string>
    <string name="title_activity_registrarse">Registrarse</string>
    <string name="title_activity_eventos">Register</string>
    <string name="title_activity_votar">Vote</string>
    <string name="title_activity_donde_esta">Where Is</string>
    <string name="title_activity_vewr_fotos_de">View Photos</string>
    <string name="title_activity_compartir_con">Share With</string>
    <string name="title_activity_detalle_evento">Event Detail</string>
    <string name="error_conexion">Connection error. Click the refresh button to retry.</string>
    <string name="formato_rango_fecha">From %1$s to %2$s</string>
    <string name="formato_precio">%.2f €</string>
    <string name="formato_director">Directed by %s</string>
    <string name="formato_interpretes">Interpreted by %s</string>

    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_rutas">Routes</string>
    
    
    <!-- Strings para la clase GPS diálogo -->
	 <string name="gps_signal_not_found">GPS Signal not found</string>	
     <string name="Titulo_dialogo_gps">GPS Signal not found</string>
     <string name="mensaje_dialogo_gps">Go to the GPS options?</string>
     <string name="mensaje_dialogo_gps_btn_cancelar">Cancel</string>
     <string name="mensaje_dialogo_gps_btn_aceptar">Acept</string>
     
    <!-- Strings para la clase Maps diálogo -->
	<string name="dialogoErrorConexion_error">Error</string>
	<string name="dialogoErrorConexion_mensaje">Could not connect</string>  
	
	<!-- Strings para la clase ParticularizedOverlay diálogo -->
	<string name="dialogoInfo_local_YES">OK</string>

    <!-- COMO YO lo traducire todo cuando todo este funcionando dejadlos agrupados si podeis-->
	    <string name="compartir">Share</string>
	    <string name="comentarios_Votar">go Vote</string>
	    <string name="comentarios_ErrorBD">BD missing \n please come back and try again</string>
	    <string name="comentarios_NoHay">nobody write anything about\n going first</string>
	    <string name="comentarios_NoHayComentarios">can\'t find information\n please come back and try again</string>
	    <string name="votar_puntuacion">Do you Like it?</string>
	    <string name="votar_miOpinion">Write a Comment</string>
	    <string name="votar_botonVotar">Vote</string>
	    <string name="votar_compartir_heEstado">I was in </string>
	    <string name="votar_compartir_viendo">looking at</string>
	    <string name="votar_compartir_ceroEstrella">and do not like</string>
	    <string name="votar_compartir_unaEstrella">and something can be seen</string>
	    <string name="votar_compartir_dosEstrella">and it\'s almost fine</string>
	    <string name="votar_compartir_tresEstrella">and it\'s good</string>
	    <string name="votar_compartir_cuatroEstrella">and it\'s very good</string>
	    <string name="votar_compartir_cincoEstrella">and it\'s excellent</string>
	    <string name="votar_compartir_sinComentario"> - no comment -</string>
    <!-- =========================================================================================== -->
	    <string name="detalle_eventoBotonComentarios">ver comentarios</string>	    
    
    <!--Strings de activity_mi_perfil.xml  -->
    <string name="textUserName">Username:</string>
    <string name="textUserPassword">Password:</string>    
    <string name="textButtonLogIn">Accept</string>
    <string name="textButtonLogOut">Exit</string>
    <string name="textButtonRegistrar">Sign up</string>    
	<string name="textLoginOk">Login succeed</string>
	<string name="textLoginServerError">Login error.\n\nVerify:\n -The introduced information.\n -Your connection</string>
	<string name="textDatosErroneos">Username or password isn\'t correct. Please verify these and try again</string>
	<string name="textErrorRegistro">Registration failed.\n\nSuggestions:\n -Select other username\n -Verify your connection</string>
	<string name="textRegistroOk">Registration succed</string>
	<string name="textoCabeceraDialogo">Continue?</string>
    <string name="textoMensajeDialogo">Registration will be done with:\n\n</string>
    <string name="textoBotonContinuar">Accept</string>
    <string name="textoBotonCancelar">Cancel</string>
</resources>
